fix scrollspy on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@
 	}
 
 	#contact {
-		height: 100%;
+		height: 101%;
 	}
 	
 	#contact_header {
